--- a/.github/workflows/build-apk-flauncher.yml
+++ b/.github/workflows/build-apk-flauncher.yml
@@ -75,41 +75,52 @@ jobs:
         working-directory: ./flauncher_source
         run: |
           set -x
-          # 定义目标文件
+          # 定义文件路径
+          SETTINGS_GRADLE="android/settings.gradle"
           APP_BUILD_GRADLE="android/app/build.gradle"
-          ROOT_BUILD_GRADLE="android/build.gradle"
           GRADLE_PROPERTIES="android/gradle/wrapper/gradle-wrapper.properties"
-          # 检查关键文件是否存在
-          for f in "$APP_BUILD_GRADLE" "$GRADLE_PROPERTIES"; do
-            if [ ! -f "$f" ]; then
-              echo "❌ 错误：找不到 $f"
-              exit 1
+          # 1. 备份文件
+          cp "$SETTINGS_GRADLE" "$SETTINGS_GRADLE.bak" 2>/dev/null || true
+          cp "$APP_BUILD_GRADLE" "$APP_BUILD_GRADLE.bak"
+          cp "$GRADLE_PROPERTIES" "$GRADLE_PROPERTIES.bak"
+          # 2. 升级 Gradle 包装器到 8.11.1
+          if [ -f "$GRADLE_PROPERTIES" ]; then
+            sed -i 's|distributionUrl=.*gradle-[0-9.]*-all\.zip|distributionUrl=https\://services.gradle.org/distributions/gradle-8.11.1-all.zip|' "$GRADLE_PROPERTIES"
+          else
+            echo "找不到 $GRADLE_PROPERTIES"
+            exit 1
+          fi
+          # 3. 在 settings.gradle 中升级 Android Gradle Plugin 版本到 8.6.0
+          if [ -f "$SETTINGS_GRADLE" ]; then
+            # 匹配 com.android.application 版本号并替换
+            perl -i -pe 's/(id "com\.android\.application" version ")[0-9.]+(")/${1}8.6.0${2}/' "$SETTINGS_GRADLE"
+            echo "已更新 settings.gradle 中的 AGP 版本"
+          else
+            # 如果没有 settings.gradle，尝试在 build.gradle 中添加 buildscript（但通常新项目有 settings.gradle）
+            echo "未找到 settings.gradle，请手动检查 AGP 版本定义"
+          fi
+          # 4. 在 app/build.gradle 的 splits.abi 块中添加 include 指令（如果尚未存在）
+          if [ -f "$APP_BUILD_GRADLE" ]; then
+            if ! grep -q "include.*arm64-v8a" "$APP_BUILD_GRADLE"; then
+              # 使用 sed 在 splits.abi 块中的 enable 行后插入 include
+              sed -i '/splits\s*{\s*abi\s*{/,/}/ { /enable[^\n]*/a \            include "arm64-v8a", "armeabi-v7a", "x86", "x86_64"
+              }' "$APP_BUILD_GRADLE"
+              echo "已添加 include 指令到 splits.abi"
+            else
+              echo "splits.abi 中已存在 include 指令"
             fi
-          done
-          # 1. 升级 Gradle 包装器到 8.11.1（兼容 AGP 8.6.0）
-          sed -i 's|distributionUrl=.*gradle-[0-9.]*-all\.zip|distributionUrl=https\://services.gradle.org/distributions/gradle-8.11.1-all.zip|' "$GRADLE_PROPERTIES"
-          # 2. 在 splits.abi 块中添加 include 指令（如果尚未存在）
-          if ! grep -q "include.*arm64-v8a" "$APP_BUILD_GRADLE"; then
-            # 使用 awk 在 enable 行后插入 include
-            awk '/splits\s*{\s*abi\s*{/,/}/ { 
-              if ($0 ~ /enable[^\n]*/) { 
-                print $0; 
-                print "            include \"arm64-v8a\", \"armeabi-v7a\", \"x86\", \"x86_64\"";
-              } else print $0; 
-              next 
-            } 1' "$APP_BUILD_GRADLE" > "$APP_BUILD_GRADLE.tmp" && mv "$APP_BUILD_GRADLE.tmp" "$APP_BUILD_GRADLE"
+          else
+            echo "找不到 $APP_BUILD_GRADLE"
+            exit 1
           fi
-          # 3. 可选：如果 Kotlin 版本存在，升级到 1.9.20
-          if grep -q 'ext.kotlin_version' "$ROOT_BUILD_GRADLE" 2>/dev/null; then
-            sed -i 's/ext.kotlin_version = ["'\'']*[0-9.]*["'\'']*/ext.kotlin_version = "1.9.20"/' "$ROOT_BUILD_GRADLE"
-          fi
-          # 4. 显示修改结果
-          echo "Gradle 文件已更新："
-          echo "Gradle 包装器版本："
+          # 5. 显示修改后的关键配置
+          echo "=== Gradle 包装器版本 ==="
           grep "distributionUrl" "$GRADLE_PROPERTIES"
-          echo "ABI splits 配置："
+          echo "=== settings.gradle 中的 AGP 版本 ==="
+          grep "com.android.application" "$SETTINGS_GRADLE" 2>/dev/null || echo "未找到"
+          echo "=== app/build.gradle 中的 splits.abi 配置 ==="
           sed -n '/splits\s*{\s*abi\s*{/,/}/p' "$APP_BUILD_GRADLE"
-
+ 
       - name: Build with flutter
         working-directory: ./flauncher_source
         env:
