--- a/.github/workflows/build-apk-flauncher.yml
+++ b/.github/workflows/build-apk-flauncher.yml
@@ -76,51 +76,33 @@ jobs:
         run: |
           set -x
           # 定义文件路径
-          SETTINGS_GRADLE="android/settings.gradle"
           APP_BUILD_GRADLE="android/app/build.gradle"
+          ROOT_BUILD_GRADLE="android/build.gradle"
           GRADLE_PROPERTIES="android/gradle/wrapper/gradle-wrapper.properties"
-          # 1. 备份文件
-          cp "$SETTINGS_GRADLE" "$SETTINGS_GRADLE.bak" 2>/dev/null || true
+          # 备份文件
           cp "$APP_BUILD_GRADLE" "$APP_BUILD_GRADLE.bak"
+          cp "$ROOT_BUILD_GRADLE" "$ROOT_BUILD_GRADLE.bak" 2>/dev/null || true
           cp "$GRADLE_PROPERTIES" "$GRADLE_PROPERTIES.bak"
-          # 2. 升级 Gradle 包装器到 8.11.1
-          if [ -f "$GRADLE_PROPERTIES" ]; then
-            sed -i 's|distributionUrl=.*gradle-[0-9.]*-all\.zip|distributionUrl=https\://services.gradle.org/distributions/gradle-8.11.1-all.zip|' "$GRADLE_PROPERTIES"
+          # 1. 升级 Gradle 包装器到 8.11.1（兼容 AGP 8.6.0）
+          sed -i 's|distributionUrl=.*gradle-[0-9.]*-all\.zip|distributionUrl=https\://services.gradle.org/distributions/gradle-8.11.1-all.zip|' "$GRADLE_PROPERTIES"
+          # 2. 在根 build.gradle 中设置 AGP 版本为 8.6.0
+          if grep -q "buildscript" "$ROOT_BUILD_GRADLE"; then
+            # 已存在 buildscript，替换 classpath 版本
+            perl -i -pe 's/(classpath ["'\'']com\.android\.tools\.build:gradle:)[0-9.]+(["'\''])/${1}8.6.0${2}/' "$ROOT_BUILD_GRADLE"
           else
-            echo "找不到 $GRADLE_PROPERTIES"
-            exit 1
+            # 不存在，在文件开头插入 buildscript 块
+            sed -i '1i buildscript {\n    repositories {\n        google()\n        mavenCentral()\n    }\n    dependencies {\n        classpath "com.android.tools.build:gradle:8.6.0"\n    }\n}\n' "$ROOT_BUILD_GRADLE"
           fi
-          # 3. 在 settings.gradle 中升级 Android Gradle Plugin 版本到 8.6.0
-          if [ -f "$SETTINGS_GRADLE" ]; then
-            # 匹配 com.android.application 版本号并替换
-            perl -i -pe 's/(id "com\.android\.application" version ")[0-9.]+(")/${1}8.6.0${2}/' "$SETTINGS_GRADLE"
-            echo "已更新 settings.gradle 中的 AGP 版本"
-          else
-            # 如果没有 settings.gradle，尝试在 build.gradle 中添加 buildscript（但通常新项目有 settings.gradle）
-            echo "未找到 settings.gradle，请手动检查 AGP 版本定义"
-          fi
-          # 4. 在 app/build.gradle 的 splits.abi 块中添加 include 指令（如果尚未存在）
-          if [ -f "$APP_BUILD_GRADLE" ]; then
-            if ! grep -q "include.*arm64-v8a" "$APP_BUILD_GRADLE"; then
-              # 使用 sed 在 splits.abi 块中的 enable 行后插入 include
-              sed -i '/splits\s*{\s*abi\s*{/,/}/ { /enable[^\n]*/a \            include "arm64-v8a", "armeabi-v7a", "x86", "x86_64"
-              }' "$APP_BUILD_GRADLE"
-              echo "已添加 include 指令到 splits.abi"
-            else
-              echo "splits.abi 中已存在 include 指令"
-            fi
-          else
-            echo "找不到 $APP_BUILD_GRADLE"
-            exit 1
-          fi
-          # 5. 显示修改后的关键配置
+          # 3. 替换 app/build.gradle 中的 splits.abi 块，显式指定支持的 ABI
+          perl -i -0777 -pe 's/splits\s*\{\s*abi\s*\{.*?\}\s*\}/splits {\n        abi {\n            enable gradle.startParameter.taskNames.any { it.contains("assembleRelease") }\n            include "arm64-v8a", "armeabi-v7a", "x86", "x86_64"\n            universalApk true\n        }\n    }/s' "$APP_BUILD_GRADLE"
+          # 4. 显示修改结果
           echo "=== Gradle 包装器版本 ==="
           grep "distributionUrl" "$GRADLE_PROPERTIES"
-          echo "=== settings.gradle 中的 AGP 版本 ==="
-          grep "com.android.application" "$SETTINGS_GRADLE" 2>/dev/null || echo "未找到"
+          echo "=== 根 build.gradle 中的 AGP 版本 ==="
+          grep "com.android.tools.build:gradle" "$ROOT_BUILD_GRADLE" || echo "未找到"
           echo "=== app/build.gradle 中的 splits.abi 配置 ==="
           sed -n '/splits\s*{\s*abi\s*{/,/}/p' "$APP_BUILD_GRADLE"
- 
+       
       - name: Build with flutter
         working-directory: ./flauncher_source
         env:
