--- a/.github/workflows/build-apk-flauncher.yml
+++ b/.github/workflows/build-apk-flauncher.yml
@@ -57,7 +57,7 @@ jobs:
         uses: subosito/flutter-action@main
         with:
           # flutter-version: '3.24.5'
-          flutter-version: '3.41.2'
+          flutter-version: '3.31.0'
           channel: 'stable'
 
       - name: Accept android licenses
@@ -71,38 +71,33 @@ jobs:
           # 实际为p12，非jks，懒得改构建代码了
           echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 -d > android/app/upload-keystore.jks
 
-      - name: Patch gradle files for latest flutter
+      - name: Patch gradle files for flutter upgrade
         working-directory: ./flauncher_source
         run: |
           set -x
           SETTINGS_GRADLE="android/settings.gradle"
           APP_BUILD_GRADLE="android/app/build.gradle"
           GRADLE_PROPERTIES="android/gradle/wrapper/gradle-wrapper.properties"
-          # 1. 升级 Gradle 包装器
-          sed -i 's|distributionUrl=.*gradle-[0-9.]*-all\.zip|distributionUrl=https\://services.gradle.org/distributions/gradle-8.11.1-all.zip|' "$GRADLE_PROPERTIES"
-          # 2. 在 settings.gradle 中升级 AGP 版本到 8.6.0（处理 plugins 块）
-          if [ -f "$SETTINGS_GRADLE" ]; then
-            echo "正在修改 $SETTINGS_GRADLE ..."
-            # 备份
-            cp "$SETTINGS_GRADLE" "$SETTINGS_GRADLE.bak"
-            # 匹配 plugins 块中的 com.android.application 版本号并替换
-            perl -i -pe 's/(id "com\.android\.application" version ")[0-9.]+(")/${1}8.6.0${2}/' "$SETTINGS_GRADLE"
-            # 如果没有匹配到，可能是在 plugins 块中用单引号或不同格式，尝试更宽松的匹配
-            perl -i -pe 's/(id ['\''"]com\.android\.application['\''"] version ['\''"])[0-9.]+(['\'"])/${1}8.6.0${2}/' "$SETTINGS_GRADLE"
-          else
-            echo "警告：未找到 $SETTINGS_GRADLE"
-          fi
-          # 3. 在 app/build.gradle 中替换整个 splits.abi 块（确保 include 生效）
-          echo "正在修改 $APP_BUILD_GRADLE ..."
-          cp "$APP_BUILD_GRADLE" "$APP_BUILD_GRADLE.bak"
+          # 1. 升级 Gradle 包装器（根据目标 Flutter 版本选择对应 Gradle 版本）
+          # Flutter 3.27.0 → Gradle 8.4
+          # Flutter 3.29.0 → Gradle 8.6
+          # Flutter 3.31.0 → Gradle 8.10.2
+          sed -i 's|distributionUrl=.*gradle-[0-9.]*-all\.zip|distributionUrl=https\://services.gradle.org/distributions/gradle-8.10.2-all.zip|' "$GRADLE_PROPERTIES"
+          # 2. 升级 settings.gradle 中的 AGP 版本（plugins 块）
+          # Flutter 3.27.0 → AGP 8.3.0
+          # Flutter 3.29.0 → AGP 8.4.0
+          # Flutter 3.31.0 → AGP 8.5.0
+          perl -i -pe 's/(id "com\.android\.application" version ")[0-9.]+(")/${1}8.5.0${2}/' "$SETTINGS_GRADLE"
+          # 若使用单引号，同样处理
+          perl -i -pe "s/(id 'com\.android\.application' version ')[0-9.]+(')/\${1}8.5.0\${2}/" "$SETTINGS_GRADLE"
+          # 3. 确保 app/build.gradle 中的 splits.abi 包含 include 指令（防止 ABI 错误）
           perl -i -0777 -pe 's/splits\s*\{\s*abi\s*\{.*?\}\s*\}/splits {\n        abi {\n            enable gradle.startParameter.taskNames.any { it.contains("assembleRelease") }\n            include "arm64-v8a", "armeabi-v7a", "x86", "x86_64"\n            universalApk true\n        }\n    }/s' "$APP_BUILD_GRADLE"
-          # 4. 验证修改结果
-          echo "=== 修改后配置 ==="
-          echo "--- Gradle 包装器版本 ---"
+          # 4. 验证修改
+          echo "=== Gradle wrapper version ==="
           grep "distributionUrl" "$GRADLE_PROPERTIES"
-          echo "--- settings.gradle 中的 AGP 版本 ---"
-          grep "com.android.application" "$SETTINGS_GRADLE" || echo "未找到"
-          echo "--- app/build.gradle 中的 splits.abi 配置 ---"
+          echo "=== AGP version in settings.gradle ==="
+          grep "com.android.application" "$SETTINGS_GRADLE"
+          echo "=== splits.abi config in app/build.gradle ==="
           sed -n '/splits\s*{\s*abi\s*{/,/}/p' "$APP_BUILD_GRADLE"
  
       - name: Build with flutter
