--- a/.github/workflows/build-apk-flauncher.yml
+++ b/.github/workflows/build-apk-flauncher.yml
@@ -103,36 +103,13 @@ jobs:
             --target-platform android-arm64 \
             --build-number $BUILD_NUMBER \
             --build-name=$FULL_VERSION_NUMBER
-
-      - name: Find and list all apks
+ 
+      - name: Rename and move
         working-directory: ./flauncher_source
         run: |
           mkdir -p "${{ github.workspace }}/dist"
-          # 查找所有 .apk 文件，将路径存入多行字符串
-          APK_PATHS=$(find build -name "*.apk" -type f)
-          # 打印所有路径（用于日志）
-          echo "Found APK(s):"
-          echo "$APK_PATHS"
-          # 将路径列表存入环境变量，供后续步骤使用
-          echo "APK_PATHS<<EOF" >> $GITHUB_ENV
-          echo "$APK_PATHS" >> $GITHUB_ENV
-          echo "EOF" >> $GITHUB_ENV
-          
-      - name: Find and rename apk
-        working-directory: ./flauncher_source
-        run: |
-          mkdir -p "${{ github.workspace }}/dist"
-          APK_PATH=$(find build -name "*arm64-v8a*release.apk" -type f | head -n 1)
-          if [ -z "$APK_PATH" ]; then
-            APK_PATH=$(find build -name "*.apk" -type f | head -n 1)
-          fi
-          if [ -z "$APK_PATH" ]; then
-            echo "No APK found!"
-            exit 1
-          fi
-          echo "Found APK at $APK_PATH"
-          mv "$APK_PATH" "${{ github.workspace }}/dist/flauncher-${{ env.BUILD_DATE }}.apk"
-
+          mv "./build/app/outputs/apk/production/release/app-production-release.apk" "${{ github.workspace }}/dist/flauncher-${{ env.BUILD_DATE }}.apk"
+ 
       - name: Erase keystore, encrypt package and create release
         uses: ./ci_source/.github/actions/erase_aes256pac_release/
         with:
