--- a/.github/workflows/build-apk-glauncher.yml
+++ b/.github/workflows/build-apk-glauncher.yml
@@ -56,7 +56,7 @@ jobs:
       - name: Install flutter
         uses: subosito/flutter-action@main
         with:
-          flutter-version: '3.38.x'
+          flutter-version: '3.38.1'
           channel: 'stable'
  
       - name: Accept android licenses
