--- a/.github/workflows/build-apk-adb-kit.yml
+++ b/.github/workflows/build-apk-adb-kit.yml
@@ -49,6 +49,14 @@ jobs:
           flutter-version: '3.x'
           channel: 'stable'
 
+      - name: Replace device_info dependency with fork
+        working-directory: ./adb_kit_source
+        run: |
+          # 将 pubspec.yaml 中 device_info 的 git 地址替换为新 fork 仓库
+          sed -i 's|https://github.com/nightmare-space/device_info.git|https://github.com/zxgv5/flutter_android_device_info.git|' pubspec.yaml
+          # 可选：确认替换结果（调试时可取消下一行注释）
+          # grep -A 2 device_info pubspec.yaml
+ 
       - name: Write keystore
         working-directory: ./adb_kit_source
         run: |
