--- a/.github/workflows/build-apk-btremote.yml
+++ b/.github/workflows/build-apk-btremote.yml
@@ -25,11 +25,13 @@ jobs:
       - name: Checkout source repo
         uses: actions/checkout@main
         with:
-          repository: https://gitlab.com/Atharok/BtRemote
+          repository: https://gitlab.com/Atharok/BtRemote.git
           ref: main
           path: btremote_source
           fetch-depth: 0
           submodules: recursive
+          token: ''
+          persist-credentials: false # 阻止使用任何缓存的凭据
 
       - name: Checkout ci source repo (self)
         uses: actions/checkout@main
