更新 build-apk-btremote.yml

--- a/.github/workflows/build-apk-btremote.yml
+++ b/.github/workflows/build-apk-btremote.yml
@@ -61,15 +61,16 @@ jobs:
           build-scan-publish: true
           build-scan-terms-of-use-url: "https://gradle.com/terms-of-service"
           build-scan-terms-of-use-agree: "yes"
-
+ 
       - name: Build with gradle
         working-directory: ./btremote_source
         run: |
           yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses > /dev/null || true
+          # 确保 gradle.properties 末尾有换行，防止拼接错误
+          echo "" >> gradle.properties
           echo 'org.gradle.caching=true' >> gradle.properties
           echo 'org.gradle.parallel=true' >> gradle.properties
           chmod +x ./gradlew
-          # 构建 gplay release 变体，默认包含所有 ABI，此处仅构建 arm64-v8a 架构
           ./gradlew app:assembleGplayRelease -Pandroid.abis=arm64-v8a
 
       - name: Rename and move
