更新 build-apk-btremote.yml

--- a/.github/workflows/build-apk-btremote.yml
+++ b/.github/workflows/build-apk-btremote.yml
@@ -75,7 +75,8 @@ jobs:
           echo 'org.gradle.caching=true' >> gradle.properties
           echo 'org.gradle.parallel=true' >> gradle.properties
           chmod +x ./gradlew
-          ./gradlew app:assembleGplayRelease -Pandroid.abis=arm64-v8a
+          # 同时构建 gplayRelease 和 defaultRelease 两种风味，并限制为 arm64-v8a 架构
+          ./gradlew app:assembleGplayRelease app:assembleDefaultRelease -Pandroid.abis=arm64-v8a
 
       - name: List generated apk files
         working-directory: ./btremote_source
@@ -87,8 +88,21 @@ jobs:
         working-directory: ./btremote_source
         run: |
           mkdir -p "${{ github.workspace }}/dist"
-          apkPath=$(ls app/build/outputs/apk/gplay/release/app-gplay-release.apk)
-          mv "$apkPath" "${{ github.workspace }}/dist/btremote-${{ env.BUILD_DATE }}.apk"
+          # 移动 gplay 版本（用于调试，不上传）
+          if [ -f app/build/outputs/apk/gplay/release/app-gplay-release.apk ]; then
+            mv app/build/outputs/apk/gplay/release/app-gplay-release.apk "${{ github.workspace }}/dist/btremote-gplay-${{ env.BUILD_DATE }}.apk"
+            echo "gplay APK moved to dist/btremote-gplay-${{ env.BUILD_DATE }}.apk"
+          else
+            echo "Warning: gplay APK not found"
+          fi
+          # 移动 default 版本（作为最终发布产物）
+          if [ -f app/build/outputs/apk/default/release/app-default-release.apk ]; then
+            mv app/build/outputs/apk/default/release/app-default-release.apk "${{ github.workspace }}/dist/btremote-${{ env.BUILD_DATE }}.apk"
+            echo "default APK moved to dist/btremote-${{ env.BUILD_DATE }}.apk"
+          else
+            echo "Error: default APK not found"
+            exit 1
+          fi
 
       - name: Erase keystore, encrypt package and create release
         uses: ./ci_source/.github/actions/erase_aes256pac_release/
