更新 build-apk-btremote.yml

--- a/.github/workflows/build-apk-btremote.yml
+++ b/.github/workflows/build-apk-btremote.yml
@@ -88,21 +88,7 @@ jobs:
         working-directory: ./btremote_source
         run: |
           mkdir -p "${{ github.workspace }}/dist"
-          # 移动 gplay 版本（用于调试，不上传）
-          if [ -f app/build/outputs/apk/gplay/release/app-gplay-release.apk ]; then
-            mv app/build/outputs/apk/gplay/release/app-gplay-release.apk "${{ github.workspace }}/dist/btremote-gplay-${{ env.BUILD_DATE }}.apk"
-            echo "gplay APK moved to dist/btremote-gplay-${{ env.BUILD_DATE }}.apk"
-          else
-            echo "Warning: gplay APK not found"
-          fi
-          # 移动 default 版本（作为最终发布产物）
-          if [ -f app/build/outputs/apk/default/release/app-default-release.apk ]; then
-            mv app/build/outputs/apk/default/release/app-default-release.apk "${{ github.workspace }}/dist/btremote-${{ env.BUILD_DATE }}.apk"
-            echo "default APK moved to dist/btremote-${{ env.BUILD_DATE }}.apk"
-          else
-            echo "Error: default APK not found"
-            exit 1
-          fi
+          mv "./app/build/outputs/apk/default/release/app-default-release.apk" "${{ github.workspace }}/dist/btremote-${{ env.BUILD_DATE }}.apk"
 
       - name: Erase keystore, encrypt package and create release
         uses: ./ci_source/.github/actions/erase_aes256pac_release/
